--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -8,12 +8,14 @@
   font-weight: 400
   a, a:visited 
     text-decoration: none
-    
+  a
+    color: $darkgrey
 html 
   width: 100% 
   font-size: 12pt
   overflow-x: hidden
   color: $accentdark
+  background: $main-background
   @include edgesnap 
     font-size: 1.5vw
   @media(max-width: 1000px)
