--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -9,6 +9,8 @@ $light-grey: #F0F0F0
 $grey: #A3A3A3
 $medium-grey: #919191
 
+$main-background: #fafafa
+
 $gradientdark: #62119B
 $gradientlight: #D62E26
 $gradientmid: #38E86F
@@ -50,7 +52,7 @@ $tablet-phone: 650px
 $tablet-width: 768px
 $tablet-large: 1024px
 $desktop-width: 992px
-$edgesnap-width: 1100px
+$edgesnap-width: 1200px
 $tablet-landscape-width: 1024px
 $nav-snap: 610px
 $featured-snap: 900px
