--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -21,7 +21,7 @@ $gradientdark: #38E96E
 $darkgrey: #253031
 
 //og
-// $accentdark: #102B3F
+$accent: #c6c5b3
 $accentdark: #122235
 //dark greyish
 // $accentdark: #253031
