--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -10,6 +10,8 @@
         &__left
             width: 40%
             // background: pink
+            h3
+                color: $medium-grey
         &__right
             display: flex
             flex-direction: column
@@ -25,11 +27,11 @@
                     input
                         padding: 10px
                         border-radius: 2px
-                        border: 1px solid lightgray
+                        border: 1px solid $light-grey
                     textarea
                         border: none
                         border-radius: 2px
-                        border: 1px solid light gray
+                        border: 1px solid $light-grey
                         resize: none
               
                 .name
