--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -5,9 +5,9 @@
 
 //colors
 $blue-grey: #102B3F
-$light-grey: #F0F0F0
+$light-grey: #cccccc
 $grey: #A3A3A3
-$medium-grey: #919191
+$medium-grey: #656565
 
 $main-background: #fafafa
 
@@ -22,7 +22,7 @@ $darkgrey: #253031
 
 //og
 $accent: #c6c5b3
-$accentdark: #122235
+$accentdark: #404040
 //dark greyish
 // $accentdark: #253031
 // $accentdark: #1F2728
