--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -23,26 +23,31 @@
         @include navsnap
             display: flex
         .dot
-            background: skyblue
+            // background: skyblue
             display: flex
             padding: 10px
             &:hover
-                animation: spin-dot 2s infinite
+                animation: spin-dot 2s 2
             &__one
+                animation: dot-in .8s forwards
+                transform: translateX(300%)
                 border-radius: 100%
-                background: pink
+                background: black
                 width: 9px
                 height: 9px
                 margin: 2px
             &__two
+                animation: dot-in .8s forwards
                 border-radius: 100%
-                background: green
+                transform: translateX(150%)
+                background: black
                 width: 9px
                 height: 9px
                 margin: 2px
             &__three
+                animation: dot-in .8s forwards
                 border-radius: 100%
-                background: blue
+                background: black
                 width: 9px
                 height: 9px
                 margin: 2px
@@ -53,7 +58,6 @@
                 margin-left: 10px
                 margin-top: 20px
     .nav__open
-        background: white
         .nav
             animation: nav-open 2s forwards
             background: coral
@@ -66,16 +70,21 @@
             margin-top: 100px
             right: 0
     .nav__closed
-        background: red
         .nav
             // animation: nav-close 2s  forwards
             display: none
             // visibility: hidden
+    a
+        &:hover
+            color: $light-grey
 @keyframes spin-dot
     0%
         transform: rotate(0deg)
     100%
         transform: rotate(360deg)
+@keyframes dot-in
+    100%
+        transform: translateX(0%)
 @keyframes nav-open
 
 
