--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -107,13 +107,15 @@ button, input[type="submit"], input[type="reset"]
 
 
 
-
+.sethtml
+  p,h1,h2,h3,h4,h5,h6,a,img
+    margin-bottom: 1rem
 .col__swap
     @include navsnap
       flex-direction: column
 .snap__full
     @include navsnap
-    width: 100%
+      width: 100%
     
 .submit
     animation: fillback .5s forwards
