--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -33,7 +33,7 @@ $accentdark: #404040
 $accentlight: rgb(175,37,205)
 
 //fonts 
-$mainfont: "Rubik", sans-serif
+$mainfont: "Sumana", sans-serif
 $subfont: "Avenir", sans-serif
 
 //font-weights
