--- a/src/components/styles/home.sass
+++ b/src/components/styles/home.sass
@@ -15,3 +15,6 @@
         align-items: center
         justify-content: center
         width: 50%
+        h2
+            font-size: 3vw
+            font-family: $mainfont !important
