--- a/src/components/styles/about.sass
+++ b/src/components/styles/about.sass
@@ -5,14 +5,14 @@
     justify-content: space-between
     &__left
         width: 40%
-        &__img
-            width: 100%
-            img
-                max-width: 100%
-                padding: 20px 0px
+        h2
+            color: $medium-grey
+            // font-family: $mainfont
+            // letter-spacing: .3em
+
     &__right
         display: flex
         flex-direction: column
         align-items: center
         justify-content: center
-        width: 55%
+        width: 49%
