--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -11,39 +11,51 @@
             width: 40%
             // background: pink
             h3
+                letter-spacing: .3em
+                font-size: 1.5rem
+                padding-bottom: 40px
                 color: $medium-grey
         &__right
             display: flex
             flex-direction: column
             align-items: center
             justify-content: center
-            width: 55%
+            width: 48%
             form
                 // background: tan
                 label
+                    font-weight: $light
+                    font-family: $mainfont
                     margin-bottom: 25px
                     display: flex
                     flex-direction: column
                     input
-                        padding: 10px
+                        margin-top: 5px
+                        padding: 15px
                         border-radius: 2px
                         border: 1px solid $light-grey
+                        background: $main-background
                     textarea
                         border: none
                         border-radius: 2px
                         border: 1px solid $light-grey
                         resize: none
+                        background: $main-background
+                        margin-top: 5px
+
+
               
                 .name
                     justify-content: space-between
                     display: flex
                     flex-direction: row
                     input
-                        width: 48%
+                        width: 49%
     &__title
         display: flex
         justify-content: center
-        padding: 20vh
+        padding: 13vh
         width: 100%
         h2
-            font-size: 4vw
+            font-family: $mainfont
+            font-size: 3.1vw
