--- a/src/components/styles/memoir.sass
+++ b/src/components/styles/memoir.sass
@@ -7,6 +7,31 @@
     align-items: center
     &__main
         // background: teal
-        width: 80%
+        width: 67%
         padding: 10px
-        border-left: 1px solid black
+        padding-left: 20px
+        border-left: 1px solid $light-grey
+        @include navsnap
+            width: 100%
+.mem__herotext
+    width: 100%
+    // background: teal
+    color: white
+    display: flsex
+    align-items: center
+    flex-direction: column
+
+
+    h3
+        width: 100%
+        text-align: center
+        font-size: 1.5vw 
+        @include navsnap
+            font-size: 3.5vw 
+    h2
+        width: 100%
+        text-align: center
+        font-family: $mainfont
+        font-size: 3.3vw
+        @include navsnap
+            font-size: 7vw
