--- a/src/components/layout/footer.sass
+++ b/src/components/layout/footer.sass
@@ -1,16 +1,45 @@
+@import '../vars.sass'
+
 footer
     margin-top: 220px
     display: flex
     width: 100%
     flex-direction: column
     align-items: center
+    margin-bottom: 122px
+    @include navsnap
+        margin-top: 70px
+    h3
+        margin-bottom: 50px
+        font-family: $mainfont
+        color: $medium-grey
+    p
+        font-size: .8rem
+        @include navsnap
+            width: 70%
+            text-align: center
     .signup
+        width: 30%
+        // background: red
+        display: flex
+        justify-content: center
+        @include navsnap
+            width: 100%
         form
+            width: 60%   
             margin: 30px
             display: flex
+            // background: blue
+            justify-content: space-between
+            @include navsnap
+                width: 80%
             input
-                padding: 10px
+                width: 73%
+                padding: 20px
                 border-radius: 2px
                 border: 1px solid lightgray
             button
-                margin-left: 20px
+                align-items: center
+    .icons
+        img
+            margin: 7px
