--- a/src/components/styles/home.sass
+++ b/src/components/styles/home.sass
@@ -12,9 +12,12 @@
     &__right
         display: flex
         flex-direction: column
-        align-items: center
+        // align-items: center
         justify-content: center
-        width: 50%
+        width: 49%
         h2
-            font-size: 3vw
-            font-family: $mainfont !important
+            margin-top: 100px
+            font-family: $mainfont
+            font-size: 2.9vw
+            @include navsnap
+                font-size: 4.9vw
