--- a/src/components/styles/photogallery.sass
+++ b/src/components/styles/photogallery.sass
@@ -3,12 +3,12 @@
 .photogallery
   display: flex
   width: 100%
-  background: lightskyblue
+  // background: lightskyblue
   &__container
     display: flex
     flex-direction: column
     width: 100%
-    background: lightgreen
+    // background: lightgreen
     &__grid 
       display: grid 
       grid-gap: 20px
@@ -16,3 +16,14 @@
       // grid-auto-rows: 46px
       // min-height: 35vw
       align-items: start
+      @include edgesnap 
+        grid-template-columns: repeat(auto-fill, minmax(400px,1fr))
+      @include navsnap 
+        grid-template-columns: repeat(auto-fill, minmax(100%,1fr))
+      p 
+        font-size: 1em
+        margin-top: 1em
+      &__item
+        margin-top: 1.5em
+        @include navsnap 
+          width: 100%
