--- a/src/components/styles/about.sass
+++ b/src/components/styles/about.sass
@@ -7,8 +7,9 @@
         width: 40%
         h2
             color: $medium-grey
-            // font-family: $mainfont
+            font-family: $subfont
             // letter-spacing: .3em
+            font-weight: $light
 
     &__right
         display: flex
