--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -15,6 +15,8 @@
                 font-size: 1.5rem
                 padding-bottom: 40px
                 color: $medium-grey
+                font-family: $subfont
+                font-weight: $light
         &__right
             display: flex
             flex-direction: column
@@ -42,9 +44,6 @@
                         resize: none
                         background: $main-background
                         margin-top: 5px
-
-
-              
                 .name
                     justify-content: space-between
                     display: flex
