--- a/src/components/styles/memoir.sass
+++ b/src/components/styles/memoir.sass
@@ -17,8 +17,9 @@
     width: 100%
     // background: teal
     color: white
-    display: flsex
+    display: flex
     align-items: center
+    justify-content: center
     flex-direction: column
 
 
