--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -33,11 +33,11 @@ $accentdark: #404040
 $accentlight: rgb(175,37,205)
 
 //fonts 
-$mainfont: "Playfair Display", sans
+$mainfont: "Suranna", sans
 $subfont: "Avenir", sans-serif
 
 //font-weights
-$light: 200
+$light: 100
 $normal: 400
 $medium: 500
 
