--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -4,7 +4,7 @@
   padding: 0
   margin: 0 
   box-sizing: border-box
-  font-family: 'Rubik', sans-serif 
+  font-family: $subfont 
   font-weight: 400
   a, a:visited 
     text-decoration: none
