--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -15,15 +15,10 @@
     width: 100vw
     @include navsnap
         padding: 10px 0
-        position: sticky
-        bottom: 0
-        z-index: 10000
     h1
         a
             font-size: .8em
             font-family: $mainfont
-            @include navsnap
-            padding-left: 0
     .desktop
         font-size: .9em
         display: flex
@@ -72,8 +67,11 @@
             background: pink
             width: 100vw
             display: flex
-            align-items: flex-start
+            align-items: flex-end
             flex-direction: column
+            font-family: $subfont
+            font-weight: $light
+
             &__link
                 margin-left: 10px
                 margin-top: 20px
