--- a/src/components/styles/home.sass
+++ b/src/components/styles/home.sass
@@ -8,15 +8,17 @@
             width: 100%
             img
                 max-width: 100%
-                padding: 20px 0px
+                // padding: 20px 0px
     &__right
         display: flex
         flex-direction: column
         // align-items: center
-        justify-content: center
+        // justify-content: center
         width: 49%
         h2
-            margin-top: 100px
+            // background: red
+            line-height: 1em
+            // margin-top: 100px
             font-family: $mainfont
             font-size: 2.9vw
             @include navsnap
