--- a/src/components/layout/footer.sass
+++ b/src/components/layout/footer.sass
@@ -19,11 +19,13 @@ footer
             width: 70%
             text-align: center
     .signup
-        width: 30%
+        width: 40%
         // background: red
         display: flex
         justify-content: center
-        @include navsnap
+        @include edgesnap
+            width: 70%
+        @include tablet
             width: 100%
         form
             width: 60%   
