--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -109,9 +109,11 @@ button, input[type="submit"], input[type="reset"]
 
 .sethtml
   p,h1,h2,h3,h4,h5,h6,a,img
-    margin-bottom: 2.4rem
+    margin-bottom: 2.3rem
   p
     font-family: $mainfont
+    font-size: 1.1rem
+    line-height: 1.6rem
 .col__swap
     @include navsnap
       flex-direction: column
