--- a/src/components/styles/excerpt.sass
+++ b/src/components/styles/excerpt.sass
@@ -16,6 +16,9 @@
             h2
                 font-family: $mainfont
                 font-size: 4vw
+                @include navsnap
+                font-size: 6vw
+
         &__page
             width: 67%
             display: flex
@@ -31,3 +34,6 @@
                 font-size: 2em
                 font-family: $mainfont
                 padding: 20px
+                @include navsnap
+                font-size: 1.5em
+
