--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -119,7 +119,7 @@ button, input[type="submit"], input[type="reset"]
       flex-direction: column
 .snap__full
     @include navsnap
-      width: 100%
+      width: 100% !important
     
 .submit
     animation: fillback .5s forwards
