--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -76,7 +76,7 @@
             flex-direction: column
             font-family: $subfont
             font-weight: $light
-            margin-right: 20px
+            padding-right: 20px
             &__link
                 margin-left: 10px
                 margin-top: 20px
