--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -64,3 +64,5 @@
         h2
             font-family: $mainfont
             font-size: 3.1vw
+            @include navsnap
+                font-size: 6vw
