--- a/src/components/styles/home.sass
+++ b/src/components/styles/home.sass
@@ -22,4 +22,5 @@
             font-family: $mainfont
             font-size: 2.9vw
             @include navsnap
-                font-size: 4.9vw
+                margin-top: 20px
+                font-size: 5.5vw
