--- a/src/components/styles/memoir.sass
+++ b/src/components/styles/memoir.sass
@@ -21,8 +21,10 @@
     align-items: center
     justify-content: center
     flex-direction: column
-
-
+    h2, h3 
+      transform: translateY(2vw)
+      opacity: 0 
+      transition: all .75s ease-in-out
     h3
         width: 100%
         text-align: center
@@ -36,3 +38,7 @@
         font-size: 3.3vw
         @include navsnap
             font-size: 7vw
+    &.loaded 
+      h3, h2
+        opacity: 1
+        transform: translateY(0)
