--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -17,6 +17,8 @@
                 color: $medium-grey
                 font-family: $subfont
                 font-weight: $light
+            p
+                margin-bottom: 20px
         &__right
             display: flex
             flex-direction: column
