--- a/src/components/styles/about.sass
+++ b/src/components/styles/about.sass
@@ -3,6 +3,14 @@
     margin-top: 70px
     display: flex
     justify-content: space-between
+    &__hero
+        img
+            margin-top: 6vw
+            @include edgesnap 
+                margin-top: 10vw
+            @include navsnap
+                margin-top: 15vw
+
     &__left
         width: 40%
         h2
