--- a/src/components/styles/memoir.sass
+++ b/src/components/styles/memoir.sass
@@ -21,6 +21,7 @@
     align-items: center
     justify-content: center
     flex-direction: column
+    color: $medium-grey
     h2, h3 
       transform: translateY(2vw)
       opacity: 0 
