--- a/src/components/styles/home.sass
+++ b/src/components/styles/home.sass
@@ -15,6 +15,8 @@
             img
                 max-width: 100%
                 // padding: 20px 0px
+            h4
+                padding: 10px 0
     &__right
         display: flex
         flex-direction: column
@@ -26,7 +28,7 @@
             line-height: 1em
             // margin-top: 100px
             font-family: $mainfont
-            font-size: 2.9vw
+            font-size: 2.5vw
             transform: translateX(1.5vw)
             opacity: 0
             transition: all 1s ease-in-out
