--- a/src/components/styles/memoir.sass
+++ b/src/components/styles/memoir.sass
@@ -22,6 +22,7 @@
     justify-content: center
     flex-direction: column
     color: $medium-grey
+    color: black
     h2, h3 
       transform: translateY(2vw)
       opacity: 0 
