--- a/src/components/styles/memoir.sass
+++ b/src/components/styles/memoir.sass
@@ -21,8 +21,10 @@
     align-items: center
     justify-content: center
     flex-direction: column
+
     color: $medium-grey
     color: black
+    color: white
     h2, h3 
       transform: translateY(2vw)
       opacity: 0 
