--- a/src/components/styles/photogallery.sass
+++ b/src/components/styles/photogallery.sass
@@ -12,18 +12,43 @@
     &__grid 
       display: grid 
       grid-gap: 20px
-      grid-template-columns: repeat(auto-fill, minmax(500px,1fr))
+      // grid-template-columns: repeat(auto-fill, minmax(500px,1fr)) 
+      // grid-template-rows: repeat(2, 1fr)
+      grid-template-columns: repeat(auto-fill, minmax(min-content, max-content))
+      // grid-template-columns: 1fr 1fr
       // grid-auto-rows: 46px
+      grid-auto-rows: auto
+      grid-auto-flow: dense
       // min-height: 35vw
       align-items: start
+      // height: auto
+      width: 100%
       @include edgesnap 
-        grid-template-columns: repeat(auto-fill, minmax(400px,1fr))
+        // grid-template-columns: repeat(auto-fill, minmax(400px,1fr))
+        grid-template-columns: repeat(auto-fill, minmax(min-content, max-content))
       @include navsnap 
-        grid-template-columns: repeat(auto-fill, minmax(100%,1fr))
+        // grid-template-columns: repeat(auto-fill, minmax(100%,1fr))
+        grid-template-columns: repeat(auto-fill, minmax(min-content, max-content))
       p 
         font-size: 1em
         margin-top: 1em
       &__item
+        // display: flex
+        flex-direction: column 
+        align-items: center 
+        justify-content: center 
+        overflow: hidden
         margin-top: 1.5em
         @include navsnap 
           width: 100%
+          grid-column-start: 1
+          grid-column-end: 3  
+        img
+          filter: grayscale(100%)
+      &__item__full 
+        width: 100%
+      &__item__full
+        width: 100%
+        grid-column-start: 1
+        grid-column-end: 3
+
