fixed mobile styling of grid

--- a/src/components/styles/photogallery.sass
+++ b/src/components/styles/photogallery.sass
@@ -56,11 +56,15 @@
           // grid-column-start: 1
           // grid-column-end: 3
           grid-area: span 3 / span 3
+          @include navsnap 
+            grid-area: span 6 / span 6
         &.stu
           // width: 3%
           // grid-column-start: 1
           // grid-column-end: 2
           grid-area: span 2 / span 2
+          @include navsnap 
+            grid-area: span 6 / span 6
         
 
 
